src/tess/tl/test/fail/test_fail_ambiguous_nfa.tl
#module main

Foo: {val: CInt}

id(n) { n }

main() {
    foo := Foo(val = 10)
    x   := foo.val                      // parser ambiguity: missing comma or semicolon before next expression
    (x - 10)
}
